# rdflib-ocdm

./: .gitignore  README.md  abstract_entity.py  ocdm_graph.py  provenance.py  pyproject.toml  query_utils.py  support.py
counter_handler/: filesystem_counter_handler.py  in_memory_counter_handler.py  sqlite_counter_handler.py
prov/: prov_entity.py  provenance.py  snapshot_entity.py
test/: br.nq  database.db  provenance_test.py
test/info_dir/: provenance_index.json
