[tool.poetry]
name = "rdflib-ocdm"
version = "0.1.0"
description = ""
authors = ["arcangelo7 <arcangelomas@gmail.com>"]
license = "ISC"
readme = "README.md"
packages = [{include = "rdflib_ocdm"}]

[tool.poetry.dependencies]
python = "^3.7"
rdflib = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
